# simpleltoo

./: Cargo.toml  justfile  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  zizmor.yml
scripts/: eltoo_commitment.simf  eltoo_commitment_template.simf  funding_transaction.simf
src/: compile.rs  error.rs  esplora.rs  faucet.rs  main.rs  script.rs  sign.rs  transaction.rs
