[package]
name = "simpleltoo"
version = "0.1.0"
edition = "2024"
autors = [
  "Luis Schwab <luisschwab@protonmail.com>",
  "Erick Cestari <erickcestari03@gmail.com>"
]
licence = "MIT"

[dependencies]
bitreq = { version = "0.2.0", features = ["async-https"] }
elements = "=0.25.2"
esplora-client = { version = "0.12.1", features = ["async-https-rustls", "tokio"] }
hal-simplicity = "0.1.0"
lwk_wollet = "0.12.0"
simplicityhl = "0.2.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
